--- a/jupyter notebooks/Max Common Subgraph.ipynb
+++ b/jupyter notebooks/Max Common Subgraph.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +36,59 @@
     "            mcs_length = len(graph.nodes())\n",
     "            mcs_graph = graph\n",
     "\n",
-    "    return mcs_graph"
+    "    return mcs_graph\n",
+    "\n",
+    "def createGraph(text, wordGraph, frame):\n",
+    "    if text:\n",
+    "        text = re.sub(r'[^\\w\\s]', '', str(text))\n",
+    "        text = text.split()\n",
+    "        try:\n",
+    "            for x in range(len(text) - frame):\n",
+    "                for y in range(1, frame + 1):\n",
+    "                    wordGraph.add_edge(text[x], text[x+y])\n",
+    "            for x in reversed(range(1, frame + 1)):\n",
+    "                for y in reversed(range(1, x)):\n",
+    "                    wordGraph.add_edge(text[len(text) - x], text[len(text) - y])\n",
+    "        except IndexError:\n",
+    "            return createGraph(text, wordGraph, frame-1)\n",
+    "        return wordGraph\n",
+    "    else:\n",
+    "        return wordGraph\n",
+    "    \n",
+    "def createGraphFromTweet(text, frame):\n",
+    "    wordGraph = nx.DiGraph()\n",
+    "    if type(text) == str:\n",
+    "        createGraph(text, wordGraph, frame)\n",
+    "    if type(text) == list:\n",
+    "        for element in text:\n",
+    "            createGraph(element, wordGraph, frame)\n",
+    "    return wordGraph"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'my', 'name', 'is', 'michelle', 'I', 'love', 'harrison', 'and', 'i', 'ice', 'cream']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tweet = \"hello, my name is michelle. I love harrison and i love ice cream.\"\n",
+    "wgraph = createGraphFromTweet(tweet, 3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
