finished final report

--- a/Project.2 20% dataset.ipynb
+++ b/Project.2 20% dataset.ipynb
@@ -1615,26 +1615,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "'''trim edges'''\n",
-    "posWordGraphTrimmed = removeEdgesByWeight(posWordGraph, 1)\n",
-    "negWordGraphTrimmed = removeEdgesByWeight(negWordGraph, 1)"
+    "posWordGraphTrimmed = removeEdgesByWeight(posWordGraph, 9)\n",
+    "negWordGraphTrimmed = removeEdgesByWeight(negWordGraph, 9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kNN score: 0.5474915912643896\n",
+      "SVM score: 0.4996447013122365\n",
+      "Logistic regression score: 0.4996447013122365\n",
+      "Decision tree score: 0.6167511487990904\n"
+     ]
+    }
+   ],
    "source": [
     "'''evaluate, same as above, but with new \"trimmed\" graphs, using MCSDES'''\n",
     "X, y = generateWordGraphVectors(sentimentTweetDict, posWordGraphTrimmed, negWordGraphTrimmed, \"TFIDF_max\")\n",
@@ -1660,13 +1671,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kNN score: 0.5604560456045604\n",
+      "SVM score: 0.4996447013122365\n",
+      "Logistic regression score: 0.4996447013122365\n",
+      "Decision tree score: 0.6140824608776667\n"
+     ]
+    }
+   ],
    "source": [
     "'''evaluate, same as above, but with new \"trimmed\" graphs, using MCSDES'''\n",
     "X, y = generateWordGraphVectors(sentimentTweetDict, posWordGraphTrimmed, negWordGraphTrimmed, \"TFIDF_avg\")\n",
@@ -1692,13 +1714,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kNN score: 0.6085555924013454\n",
+      "SVM score: 0.6105926382111896\n",
+      "Logistic regression score: 0.6122349077012964\n",
+      "Decision tree score: 0.6138455950858244\n"
+     ]
+    }
+   ],
    "source": [
     "'''evaluate, same as above, but with new \"trimmed\" graphs, using MCSDES'''\n",
     "X, y = generateWordGraphVectors(sentimentTweetDict, posWordGraphTrimmed, negWordGraphTrimmed, \"TFIDF_2\")\n",
